# accessible-surfaceome

./: .env.example  .gitattributes  .gitignore  .pages-rebuild-marker  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE  LICENSING.md  NOTICE.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  d1-backup.yml  lint-pr-title.yml  sync-figure-gists.yml  viewer-build.yml  viewer-deploy-branch.yml
.zed/: settings.json
cloudflare/: README.md  d1_compara_schema.sql  d1_public_schema.sql  d1_schema.sql  d1_triage_schema.sql
data/analysis/: resolver_collision_audit_v2_only.tsv  resolver_collision_d1_backup_20260512_113758.tsv  resolver_collision_d1_backup_20260512_120459.tsv  resolver_definitive_audit.tsv  resolver_definitive_audit_v2.tsv  resolver_definitive_audit_v3.tsv  resolver_definitive_audit_v3_d1_rows.tsv  resolver_definitive_audit_v3_d1_rows_full.tsv  resolver_definitive_audit_v3_extended.tsv  sonnet_no_m1_ge2_post_fix.tsv  sonnet_no_m1_ge3_post_v2.tsv
data/archive/: README.md  uniprot_tm_signal_accs.tsv
data/eval/: _backup_bench_truth_fc7ddee89155.tsv  triage_benchmark_v1.tsv  triage_benchmark_v1_candidates.tsv  triage_benchmark_v1_negative_candidates.tsv  triage_haiku_live_run.tsv  triage_subbench_v1.tsv
data/processed/: whole_genome_minus_m1.tsv
data/raw/: CSPA_S1_Table.xls  S1_File.xlsx  hgnc_complete_set.tsv  table_S3_surfaceome.xlsx
docs/: cellxgene-enrichment.md  coding-style.md  evidence-retrieval-prd.md  figure-reproducibility-schema.md  prompt_review.html  tools-design.md
docs/archive/: README.md  hspa1a-deep-dive-eval-2026-05.md  v1-cost-stress-test.md
docs/audit/: a1_selection_drift_2026_06_08.md  amod_anat_regression_2026_06_08.md  amod_anat_regression_2026_06_08.tsv  cache_engagement_probe_2026_06_08.md  expression_cd63_gap_2026_06_08.md  methods_unknown_2026_06_08.md  r2_and_reproducibility_2026_06_08.md  reproducibility_followup_2026_06_09.md  subcellular_localization_rationale_2026_06_08.md  tacstd2_bisect_2026_06_08.md
docs/data-sources/: whole-genome-gene-catalogs.md
docs/eval/: deep_dive_hspa1a.html  deep_dive_tgoln2.html  methodology.md  surface_annotator_reference.html  triage_agent_reference.html  triage_benchmark_v1.md  v1-cost-stress-test.md
docs/evals/: hspa1a-deep-dive-eval-2026-05.md
docs/operations/: deep-dive-modal-runbook.md  (+2 more)
modal/: README.md  deep_dive_app.py
paper/: README.md  build.py  build.sh  deliverome-print.css  figure_index.md  figure_manifest.json  figure_swap.py  figure_tsv_spotcheck.html
scripts/: README.md  _tissue_category_anchors.py  add_schweke_genes.py  apply_cf_edge_rules.py  apply_pubmed_ncbi_rescue_to_catalog.py  audit_db_vs_sonnet_inclusion.py  audit_ecd_identity_deltas.py  audit_evidence_retrieval.py  audit_resolver_collisions.py  audit_resolver_collisions_v2.py  audit_resolver_hgnc_id_v3.py  audit_resolver_hgnc_id_v3_extend.py  audit_v2_deterministic_coverage.py  augment_figure_tsvs_with_stable_ids.py  backfill_canonical_frame_topology.py  backfill_deep_block_rollups.py  backfill_deep_dive_from_json.py  backfill_ecd_identity.py  backfill_n_papers_found.py  backfill_n_papers_selected.py  backfill_ortholog_ecd_via_uniprot_features.py  backfill_sequences_and_links.py  backfill_sonnet_missing_uniprot.py  backfill_species_in_samples.py  bench_topology_vs_universe.py  benchmark_cost_vs_accuracy.py  blog_gene_cards_klk2_src_cd63.py  bootstrap-worktree.sh  build_candidate_universe_v3.py  build_czi_enrichment.py  build_czi_enrichment_single_gene.py  build_czi_enrichment_v2_1.py  build_figure_index.py  build_figure_tsvs.py  build_gene_names_json.py  build_genomewide_minus_m1.py  build_positive_control_lists.py  build_reconfirm_sonnet_no_zero_db_gene_list.py  build_schweke_d1_table.py  build_search_catalog.py  (+99 more)
tests/: conftest.py  test_afdb_plddt.py  test_api_retry.py  test_audit.py  test_benchmark_in_whole_genome.py  test_biological_context_grade.py  test_build_candidate_universe_v3_guard.py  test_build_candidate_universe_v3_optimized_votes.py  test_canonical_bench_version_only.py  test_canonical_frame_topology.py  test_canonical_mock_reads_bundled_tsv.py  test_catalog_compare_filter_parity.py  test_cell_line_species.py  test_claim_stances.py  test_cli_import.py  test_clip_id_resolver.py  test_concurrency.py  test_count_unique_papers.py  test_cross_block_validators.py  test_d1_client.py  test_d1_deterministic.py  test_d1_env_preflight.py  test_d1_no_duplicate_rows.py  test_d1_records_schema_drift.py  test_d1_schema_in_sync.py  test_datacite_fallback.py  test_deep_block_rollups.py  test_deep_dive_audit.py  test_deep_dive_census.py  test_deep_dive_json_backfill.py  test_deep_dive_pack.py  test_deep_dive_sweep.py  test_deep_dive_upload.py  test_deterministic_family_injection.py  test_deterministic_sentinels.py  test_deterministic_sequences_links.py  test_ecd_identity_homology.py  test_ecd_size_assessment.py  test_embed_metadata.py  test_europepmc_fulltext_fallback.py  (+98 more)
viewer/: .gitignore  .npmrc  README.md  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json  wrangler.toml
(+4292 files in other folders)
