[project]
name = "accessible-surfaceome"
version = "0.1.0"
description = "Standalone accessible surface-proteome annotation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.99.0",
    "biopython>=1.84",
    "goatools>=1.6.4",
    "httpx>=0.28.0",
    "matplotlib==3.9.4",
    "mygene>=3.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0,<3",
    "pdfplumber>=0.11.9",
    "pikepdf>=10.6.0",
    "polars>=1.39.0",
    "pydantic>=2.11.0",
    "pydantic-ai>=0.0.16",
    "python-dotenv>=1.0",
    "requests>=2.32.0",
    "seaborn>=0.13.2",
    "sqlite-utils>=3.38",
    "upsetplot>=0.9.0",
    "venn>=0.1.3",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
modal = [
    "modal>=0.66",
]

[project.scripts]
accessible-surfaceome = "accessible_surfaceome.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/accessible_surfaceome"]

[tool.uv]
# Supply-chain cooldown pin (see CLAUDE.md "min-release-age" rationale for the
# viewer; this is the Python-side equivalent applied surgically). pdfplumber
# pulls pypdfium2 transitively with only a `>=4.18.0` floor, so a fresh resolve
# would grab pypdfium2 5.9.0 — released 2026-06-01, i.e. <7 days old at the time
# this dep was added (2026-06-02). We pin below it to the vetted 5.8.0
# (released 2026-05-04, 29 days old, BSD-3-Clause/Apache-2.0). Persisted here —
# not as a one-shot `--exclude-newer` — so `uv lock --check` in CI stays
# reproducible. SAFE TO REMOVE once pypdfium2 5.9.0 has aged past the 7-day
# cooldown (i.e. after ~2026-06-08) and has been spot-checked.
constraint-dependencies = ["pypdfium2<5.9.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.0",
    "ruff>=0.13.0",
    "ty>=0.0.34",
]

[tool.ty.environment]
python-version = "3.11"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
markers = [
    "network: tests that require external network (gated by --run-network)",
]
