[project]
name = "accessible-surfaceome"
version = "0.1.0"
description = "Standalone accessible surface-proteome annotation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.99.0",
    "biopython>=1.84",
    "goatools>=1.6.4",
    "httpx>=0.28.0",
    "matplotlib==3.9.4",
    "mygene>=3.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0,<3",
    "pdfplumber>=0.11.9",
    "pikepdf>=10.6.0",
    "polars>=1.39.0",
    "pydantic>=2.11.0",
    "pydantic-ai>=0.0.16",
    "python-dotenv>=1.0",
    "requests>=2.32.0",
    "seaborn>=0.13.2",
    "sqlite-utils>=3.38",
    "tenacity>=9.0.0",
    "upsetplot>=0.9.0",
    "venn>=0.1.3",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
modal = [
    "modal>=0.66",
]
# Paper build chain — `bash paper/build.sh <docx>` (or directly
# `uv run python paper/build.py <docx>`) renders a manuscript .docx
# into a Deliverome-branded PDF + JATS XML. Both deps are uv-native:
#   pypandoc-binary bundles the pandoc binary inside the wheel so
#     there's no separate `brew install pandoc` step.
#   weasyprint is pure-Python (with CoreText / Pango on the system).
# Install:  uv sync --extra paper
paper = [
    "pypandoc-binary>=1.13",
    "weasyprint>=60.0",
]

[project.scripts]
accessible-surfaceome = "accessible_surfaceome.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/accessible_surfaceome"]

[tool.uv]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.0",
    "ruff>=0.13.0",
    "ty>=0.0.34",
]

[tool.ty.environment]
python-version = "3.11"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
markers = [
    "network: tests that require external network (gated by --run-network)",
]
